@@ -24,6 +24,7 @@ mkinstalldirs
 intl
 ABOUT-NLS
 intltool-*
+intltool-modules
 drwright.desktop
 drwright.spec
 autom4te.cache
