@@ -2,16 +2,24 @@ INCLUDES =					\
 	@DRWRIGHT_CFLAGS@			\
 	-DGLADEDIR=\"$(datadir)/drwright\"	\
 	-DIMAGEDIR=\"$(datadir)/drwright\"	\
-	-Werror -Wall
+	-DDBUS_API_SUBJECT_TO_CHANGE=1
 
+if HAVE_DBUS
+dbus_sources = dbus.c dbus.h
+endif
+
+bin_PROGRAMS = 
 bin_PROGRAMS = drwright
 
 drwright_SOURCES = 				\
+	$(dbus_sources)				\
 	main.c					\
 	drwright.c				\
 	drwright.h				\
 	drw-break-window.c			\
 	drw-break-window.h			\
+	drw-utils.c				\
+	drw-utils.h				\
 	drw-monitor.c				\
 	drw-monitor.h				\
 	drw-preferences.c			\
@@ -22,7 +30,6 @@ drwright_SOURCES = 				\
 	drw-selection.h
 
 drwright_LDADD = @DRWRIGHT_LIBS@ -L/usr/X11R6/lib -lXss
-drwright_LDFLAGS = -export-dynamic
 
 schemadir = @GCONF_SCHEMA_FILE_DIR@
 schema_DATA = drwright.schemas
@@ -30,4 +37,4 @@ schema_DATA = drwright.schemas
 install-data-local:
 	GCONF_CONFIG_SOURCE=$(GCONF_SCHEMA_CONFIG_SOURCE) $(GCONFTOOL) --makefile-install-rule $(srcdir)/$(schema_DATA)
 
-EXTRA_DIST = $(schema_DATA)
+EXTRA_DIST = $(schema_DATA) $(dbus_sources)
